<resources>
    <string name="app_name">CurrencyConverterTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="from_amount">From Amount</string>
    <string name="to_amount">To Amount</string>
    <string name="details">Details</string>
</resources>